<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginVertical="6dp"
    android:orientation="horizontal"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgMovieCard"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/txtMovieTitle"
            android:gravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/movie" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.7"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMovieCard"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtMovieTitle"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtMovieDescription"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBarMovie"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateDrawable="@drawable/custom_rating_bar"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="0.5"
                    android:isIndicator="true" />

                <Button
                    android:id="@+id/btnPrice"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:padding="0dp"
                    android:text="@string/btnPrice"
                    android:textColor="@color/black"
                    android:textColorLink="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="8dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>